# AppImage-Integrator

./: .gitignore  AGENTS.md  README.md  build.tmp  pyproject.toml
.github/workflows/: release.yml  tests.yml
AppDir/: .DirIcon  .bundle.yml  AppRun.env  io.github.appimageintegrator.desktop
AppDir/lib/x86_64-linux-gnu/: libcryptsetup.so.12.10.0
AppDir/usr/libexec/: dconf-service
AppDir/usr/sbin/: agetty  avahi-daemon  blkdiscard  blkid  blkzone  blockdev  capsh  cfdisk  chcpu  chmem  chroot  ctrlaltdel  faillock  fdisk  findfs  fsck  fsck.cramfs  fsck.minix  fsfreeze  fstrim  getcap  getpcaps  isosize  ldattach  losetup  mkfs  mkfs.bfs  mkfs.cramfs  mkfs.minix  mkhomedir_helper  mkswap  pam_extrausers_chkpwd  pam_extrausers_update  pam_timestamp_check  pivot_root  pwhistory_helper  readprofile  rtcwake  runuser  setcap  (+11 more)
appimage-build/apt/: apt.conf  sources.list
appimage-build/apt/archives/: avahi-daemon_0.8-13ubuntu6.1_amd64.deb  coreutils_9.4-3ubuntu6.1_amd64.deb  dbus-bin_1.14.10-4ubuntu4.1_amd64.deb  dbus-daemon_1.14.10-4ubuntu4.1_amd64.deb  dbus-user-session_1.14.10-4ubuntu4.1_amd64.deb  dbus_1.14.10-4ubuntu4.1_amd64.deb  dconf-gsettings-backend_0.40.0-4ubuntu0.1_amd64.deb  dconf-service_0.40.0-4ubuntu0.1_amd64.deb  desktop-file-utils_0.27-2build1_amd64.deb  file_1%3a5.45-3build1_amd64.deb  fontconfig-config_2.15.0-1.1ubuntu2_amd64.deb  fontconfig_2.15.0-1.1ubuntu2_amd64.deb  gcc-14-base_14.2.0-4ubuntu2~24.04.1_amd64.deb  gir1.2-adw-1_1.5.0-1ubuntu2_amd64.deb  gir1.2-freedesktop_1.80.1-1_amd64.deb  gir1.2-gdkpixbuf-2.0_2.42.10+dfsg-3ubuntu3.2_amd64.deb  gir1.2-girepository-2.0_1.80.1-1_amd64.deb  gir1.2-glib-2.0_2.80.0-6ubuntu3.8_amd64.deb  libadwaita-1-0_1.5.0-1ubuntu2_amd64.deb  (+132 more)
packaging/: AppImageBuilder.yml
scripts/: build-appimage.sh
src/appimage_integrator/: __init__.py  __main__.py  app.py  application.py  assets.py  bootstrap.py  cli.py  config.py  launcher.py  logging_utils.py  main.py  models.py  paths.py  self_integration.py
src/appimage_integrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_appimage_inspector.py  test_application.py  test_application_window.py  test_cli.py  test_desktop_entry.py  test_details_dialog.py  test_icon_resolver.py  test_id_resolver.py  test_install_flow.py  test_install_view.py  test_launcher.py  test_metadata_store.py  test_record_editor.py  test_self_integration.py  test_tooling.py  test_update_discovery.py  test_versioning.py
tests/fixtures/: README.md
(+226 files in other folders)
