[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appimage-integrator"
version = "0.1.0"
description = "Modern Gtk4 desktop manager for integrating AppImages"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
appimage-integrator = "appimage_integrator.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
